# Algorithm_X

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DancingLinks.cpp  package.bat  pyproject.toml  setup.cfg  setup.py
include/pat/: solver.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  DancingLinks.cpp  __init__.py
src/pat/: pat.hpp  solver.hpp
test/: exact_cover.cpp
tests/: __init__.py  dags.py  langford_pairs.py  n_queens.py
travis/: build-wheels.sh
