[build-system]

requires = [
    "wheel",
    "setuptools>=42",
    "ninja",
    "cmake>=3.12",
    "pybind11~=2.10.0",
    "cmake-build-extension"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
