[metadata]
description = Implementations of dancing link algorithms for various kinds of cover problem.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pēteris Zvejnieks
author_email = peterf610@gmail.com
license = MIT
platforms = any
url = https://github.com/Peteris-Zvejnieks/Algorithm_X
keywords = exact-cover combinatorics pybind11
classifiers=
    Programming Language :: C++
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    cmake-build-extension
    wheel
    setuptools>=42
    ninja
    cmake>=3.12
    pybind11~=2.10.0

[options.packages.find]
where = src

[options.extras_require]
test =
    unittest
all =
    %(test)s

# This also requires using the "expose_binaries" option in setup.py.
# It creates a generic <package>.bin.__main__ file that is exposed
# as <env>/bin/<executable_name> that relays all input arguments to
# the C++ executable.
[options.entry_points]
console_scripts =
    print_answer_swig = DancingLinks.bin.__main__:main