[metadata]
description = Implementations of dancing link algorithms for various kinds of cover problem.
long_description = file: README.md
long_description_content_type = text/markdown
author = Pēteris Zvejnieks
author_email = peterf610@gmail.com
license = MIT
platforms = Linux
url = https://github.com/Peteris-Zvejnieks/Algorithm_X
keywords = exact-cover Dancing-Links combinatorics pybind11
classifiers=
    Programming Language :: C++
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    cmake-build-extension
    wheel
    setuptools>=42
    ninja
    cmake>=3.12
    pybind11~=2.10.0

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
all =
    %(test)s